fixed hover overflow + fixed stance bonus is bound to combat rolls

--- a/The One Ring 2e/sheet.css
+++ b/The One Ring 2e/sheet.css
@@ -243,11 +243,13 @@ import url('https://fonts.cdnfonts.com/css/aniron');
     content: "";
 }
 .charsheet .sheet-hover-info {
+    display: block;
     position: absolute;
     background: white;
     z-index: 10;
     padding: 20px;
-    width: 300px;
+    width: 400px;
+    height:fit-content;
     visibility: hidden;
     opacity: 0;
     box-shadow: 0 3px 15px rgba(0,0,0,.1);
@@ -255,6 +257,9 @@ import url('https://fonts.cdnfonts.com/css/aniron');
     text-align: left;
     overflow-wrap: break-word;
     word-break: break-word;
+    white-space: normal;
+    text-overflow: ellipsis;
+    overflow: visible;
 }
 .charsheet span.label:hover + .sheet-hover-info,
 .charsheet span.sheet-label:hover + .sheet-hover-info,
@@ -382,6 +387,11 @@ import url('https://fonts.cdnfonts.com/css/aniron');
 }
 .charsheet .strong{
     font-size: large; 
+    font-weight: bold;
+}
+
+/* needed for hover infos */
+.charsheet .sheet-strong {
     font-weight: bold;
 }
 .charsheet .bordertop{
